# sc2-uqm

./: CMakeLists.txt  README.md  test.c
mingw64/: build-info.txt
mingw64/lib/gcc/x86_64-w64-mingw32/14.2.0/install-tools/: mkheaders.conf
mingw64/opt/lib/itcl4.2.1/: itclConfig.sh
mingw64/opt/lib/python3.11/: _sysconfigdata__win32_.py
mingw64/opt/lib/python3.11/config-3.11/: Makefile  python-config.py
mingw64/opt/lib/python3.11/lib-dynload/: _asyncio.cp311-mingw_x86_64_ucrt.pyd  _bisect.cp311-mingw_x86_64_ucrt.pyd  _blake2.cp311-mingw_x86_64_ucrt.pyd  _bz2.cp311-mingw_x86_64_ucrt.pyd  _codecs_cn.cp311-mingw_x86_64_ucrt.pyd  _codecs_hk.cp311-mingw_x86_64_ucrt.pyd  _codecs_iso2022.cp311-mingw_x86_64_ucrt.pyd  _codecs_jp.cp311-mingw_x86_64_ucrt.pyd  _codecs_kr.cp311-mingw_x86_64_ucrt.pyd  _codecs_tw.cp311-mingw_x86_64_ucrt.pyd  _contextvars.cp311-mingw_x86_64_ucrt.pyd  _csv.cp311-mingw_x86_64_ucrt.pyd  _ctypes.cp311-mingw_x86_64_ucrt.pyd  _ctypes_test.cp311-mingw_x86_64_ucrt.pyd  _curses.cp311-mingw_x86_64_ucrt.pyd  _curses_panel.cp311-mingw_x86_64_ucrt.pyd  _datetime.cp311-mingw_x86_64_ucrt.pyd  _decimal.cp311-mingw_x86_64_ucrt.pyd  _elementtree.cp311-mingw_x86_64_ucrt.pyd  _gdbm.cp311-mingw_x86_64_ucrt.pyd  _hashlib.cp311-mingw_x86_64_ucrt.pyd  _heapq.cp311-mingw_x86_64_ucrt.pyd  _json.cp311-mingw_x86_64_ucrt.pyd  _lsprof.cp311-mingw_x86_64_ucrt.pyd  _lzma.cp311-mingw_x86_64_ucrt.pyd  _md5.cp311-mingw_x86_64_ucrt.pyd  _msi.cp311-mingw_x86_64_ucrt.pyd  _multibytecodec.cp311-mingw_x86_64_ucrt.pyd  _multiprocessing.cp311-mingw_x86_64_ucrt.pyd  _opcode.cp311-mingw_x86_64_ucrt.pyd  _overlapped.cp311-mingw_x86_64_ucrt.pyd  _pickle.cp311-mingw_x86_64_ucrt.pyd  _queue.cp311-mingw_x86_64_ucrt.pyd  _random.cp311-mingw_x86_64_ucrt.pyd  _sha1.cp311-mingw_x86_64_ucrt.pyd  _sha256.cp311-mingw_x86_64_ucrt.pyd  _sha3.cp311-mingw_x86_64_ucrt.pyd  _sha512.cp311-mingw_x86_64_ucrt.pyd  _socket.cp311-mingw_x86_64_ucrt.pyd  _sqlite3.cp311-mingw_x86_64_ucrt.pyd  (+28 more)
mingw64/opt/lib/tcl8.6/: tclConfig.sh
mingw64/opt/lib/tdbc1.1.2/: tdbcConfig.sh
mingw64/opt/lib/terminfo/61/: altos-3  altos2
mingw64/opt/lib/terminfo/63/: cit101e  cit101e-n
mingw64/opt/lib/terminfo/65/: emu-220
mingw64/opt/lib/terminfo/6d/: mai
mingw64/opt/lib/terminfo/6e/: ncsa  ncsa-m  ncsa-m-ns  ncsa-ns  ncsa-vt220  news  news-29-euc  news-33  news-42  news-42-euc  news-42-sjis  news-old-unk  news31-o  newscbm  nwp512-a  nwp513-a  nwp517-w
mingw64/opt/lib/terminfo/6f/: opus3n1+  otek4115
mingw64/opt/lib/terminfo/70/: pcvt25  pcvt28  pcvt28w  pcvt35  pcvt40w
mingw64/opt/lib/terminfo/74/: ti916-220-7  ti916-8-132  tvi9065  tvi910+  tvi912b  tvi912b-2p-unk  tvi912b-p-2p  tvi912b-unk  tvi912b-vb  tvi912b-vb-p  tvi912c-mc  tvi912c-vb-unk  tvi920b-mc  tvi920b-p  tvi920c-2p  tvi920c-vb  tvi924  tvipt
mingw64/opt/lib/terminfo/75/: ultimaII
mingw64/opt/lib/terminfo/76/: vt200-old  vt200-w  vt220-nam  vt220d  vt300-w  vt320  vt320-k311  vt330  vt400-24  vt420f  vt420pc  vt420pcdos  vt520ansi
mingw64/opt/lib/terminfo/77/: wsvt25m
mingw64/opt/lib/terminfo/78/: x68k
mingw64/opt/lib/terminfo/7a/: z29a  z29a-nkc-bc
mingw64/opt/lib/tk8.6/: tkConfig.sh
mingw64/opt/share/terminfo/61/: abm85  abm85e  abm85h  abm85h-old  adm36  ampex210
mingw64/opt/share/terminfo/63/: cit101e-132  cit101e-n132  crt-vt220
mingw64/opt/share/terminfo/64/: ddr3180  dec-vt220
mingw64/opt/share/terminfo/67/: go140  go140w  go225
mingw64/opt/share/terminfo/68/: h29a-kc-uc  h29a-nkc-uc  hazel  hp2392  hp2647a  hp300h  hp700-wy  hp9845  hp98550a  hpex  hpsub
mingw64/opt/share/terminfo/6b/: kt7
mingw64/opt/share/terminfo/6d/: mt4520-rv
mingw64/opt/share/terminfo/6e/: netbsd6  news-29  news-29-sjis  news-33-euc  news-33-sjis  news-unk  news28  news28-a  nwp-517
mingw64/opt/share/terminfo/70/: pcmw  pcvt25-color  pcvt25w  pcvt35w  pcvt40  pcvt43  pcvt43w  pcvt50  pcvt50w  pcvtXX
mingw64/opt/share/terminfo/74/: ti916-132  ti916-8  tvi910  tvi912b-p  tvi912c-2p  tvi912c-2p-mc  tvi912c-mc-vb  tvi912cc  tvi914  tvi920b  tvi920b-2p-mc  tvi920b-2p-unk  tvi920b-unk  tvi920c-p-2p  tvi920c-p-vb  tvi920c-vb-mc  tvi920c-vb-unk  tvi921  tvi92B  tvi92D
mingw64/opt/share/terminfo/75/: uniterm49  uts30
mingw64/opt/share/terminfo/76/: v320n  versaterm  vt100-bm-o  vt200  vt220-8  vt220-js  vt320-nam  vt320-w-nam  vt420  vt510  vt510pc  vt510pcdos  vt520  vt525
mingw64/opt/share/terminfo/77/: wsvt25
mingw64/opt/share/terminfo/7a/: z340  z340-nam
mingw64/x86_64-w64-mingw32/lib/ldscripts/: i386pe.xer  i386pep.xer
sc2/src/: config_win.h  crashhandler.c  options.c  types.h  uqm.c
sc2/src/libs/log/: uqmlog.c
sc2/src/libs/mikmod/: mikmod.h
sc2/src/libs/sound/mixer/sdl/: audiodrv_sdl.c
sc2/src/libs/uio/stdio/: stdio.c  stdio.h
